# nfr_ros

nfr_apriltag/: CMakeLists.txt  package.xml  setup.cfg  setup.py
nfr_apriltag/launch/: cuda_realsense_apriltag.launch.py  cuda_usb_apriltag.launch.py  realsense_apriltag.launch.py  realsense_apriltag.py  usb_apriltag.launch.py  usb_apriltag_realsense.launch.py
nfr_apriltag/nfr_apriltag/: nfr_apriltag_node.py
nfr_apriltag/src/: nfr_apriltag_node.cpp  nfr_depth_finder.cpp
nfr_apriltag_localization/: CMakeLists.txt  package.xml
nfr_apriltag_localization/src/: nfr_apriltag_localization_node.cpp
nfr_bridge/: CMakeLists.txt  package.xml  setup.cfg  setup.py
nfr_bridge/include/nfr_bridge/: bridge_format.xsd
nfr_bridge/launch/: run_realsense.launch.py
nfr_bridge/nfr_bridge/: nfr_bridge_node.py
nfr_bridge/src/: nfr_bridge_node.cpp
nfr_camera/: CMakeLists.txt  package.xml
nfr_camera/launch/: usb_cam.launch.py
nfr_camera/src/: nfr_camera_node.cpp
nfr_charged_up/: CMakeLists.txt  package.xml
nfr_charged_up/config/: map.pgm  map.yaml  squishy.urdf  squishy_bridge.xml  swervy.urdf  swervy_nav2.yaml
nfr_charged_up/launch/: squishy.launch.py  swervy.launch.py  test.launch.py
nfr_charged_up/src/: squishy_node.cpp
nfr_crescendo/: CMakeLists.txt  package.xml
nfr_crescendo/config/: 05a3_9230-1920x1080.yaml  05a3_9230-640x480.yaml  crabby.urdf  fuse.yaml  global_shutter_1280x720.yaml  map.yaml  ost.yaml  robot_localization.yaml  swervy.urdf  swervy_nav2.yaml  usb1.yaml  usb2.yaml
nfr_crescendo/launch/: crabby.launch.py  sim.launch.py  swervy.launch.py
nfr_depth_finder/: CMakeLists.txt  package.xml
nfr_depth_finder/include/nfr_depth_finder/: nfr_depth_finder_node.hpp  visibility_control.h
nfr_depth_finder/src/: nfr_depth_finder_node.cpp
nfr_gps/: CMakeLists.txt  package.xml
nfr_gps/src/: nfr_gps_node.cpp
nfr_msgs/: CMakeLists.txt  package.xml
nfr_msgs/msg/: Target.msg  TargetList.msg
nfr_nav/: CMakeLists.txt  package.xml
nfr_nav/launch/: nav2.launch.py
nfr_nav/src/: nfr_nav_node.cpp
nfr_navigation/: CMakeLists.txt  package.xml  setup.cfg  setup.py
nfr_navigation/config/: simple_navigate_to_pose.xml
nfr_navigation/launch/: navigation.launch.py
nfr_navigation/nfr_navigation/: nfr_navigation_node.py
nfr_note_detector/: CMakeLists.txt  package.xml
nfr_note_detector/src/: nfr_note_detector_node.cpp
nfr_odometry/: CMakeLists.txt  package.xml  setup.cfg  setup.py
nfr_odometry/nfr_odometry/: nfr_odometry_node.py
nfr_odometry/src/: nfr_odometry_node.cpp
nfr_target_finder/: CMakeLists.txt  package.xml
nfr_target_finder/src/: nfr_target_finder_node.cpp
nfr_tf_bridge/: package.xml  setup.cfg  setup.py
nfr_tf_bridge/nfr_tf_bridge/: nfr_tf_bridge_node.py
nfr_tf_bridge_msgs/: CMakeLists.txt  package.xml
nfr_tf_bridge_msgs/msg/: NFRTFRequest.msg  RequestTransform.msg
nfr_tf_bridge_msgs/srv/: LookupTransform.srv
