<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nfr_target_finder</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="cml1010101@gmail.com">root</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <build_depend>apriltag_msgs</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_components</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nfr_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
